Details
-
Type:
Bug
-
Status: Closed
-
Priority:
Not Evaluated
-
Resolution: Done
-
Affects Version/s: Qt Creator 3.3.0-rc1
-
Fix Version/s: Qt Creator 3.3.0-rc1
-
Component/s: Project & Build Management
-
Labels:
-
Environment:Windows 7 64 bit
Description
- Open a project.
Let's call it project A. - Open another project.
Let's call it project B. - Select "File" -> "Close Project" -> "Close Project 'B'" from the menu.
By the way: I like this new submenu. Nice idea! - Open "File" menu again.
"Close Project" is disabled. - In the Projects view, select project A's pro file.
- Open "File" menu again.
"Close Project" is called "Close Project 'A'" and enabled.
Selecting the pro file should not be needed. If there's only one project, Creator should offer closing this. If there are more than one open projects, Creator should show the submenu.
Attachments
Issue Links
- resulted in
-
QTCREATORBUG-13569 [REG 3.2.2 -> 3.3.0] Crash when closing project
-
- Closed
-